Issue #2046, change the way images in tables are handed when text-aligned

--- a/css/ccap-developmental-math.css
+++ b/css/ccap-developmental-math.css
@@ -4899,6 +4899,16 @@ div.table table td.text-align-center {
 div.table table td.text-align-right {
   text-align: right;
 }
+div.table table td.text-align-left > .mediaobject,
+div.table table td.text-align-center > .mediaobject,
+div.table table td.text-align-right > .mediaobject {
+  line-height: 0px;
+}
+div.table table td.text-align-left > .mediaobject > img,
+div.table table td.text-align-center > .mediaobject > img,
+div.table table td.text-align-right > .mediaobject > img {
+  display: inline-block;
+}
 div[class="note"] div.table table th {
   background-color: #D7562C;
 }
