--- a/css/refactor/developmental-math-skeleton.less
+++ b/css/refactor/developmental-math-skeleton.less
@@ -3,9 +3,17 @@
 // See LICENSE.txt for details.
 
 div.table table td {
-  &.text-align-left { text-align: left; }
+  &.text-align-left { text-align: left;}
   &.text-align-center { text-align: center; }
   &.text-align-right { text-align: right; }
+  &.text-align-left,
+  &.text-align-center,
+  &.text-align-right {
+    > .mediaobject {
+      line-height: 0px;
+      > img { display: inline-block; }
+    }
+  }
 }
 
 div[class="note"] {
